samples/_failures_safe/1761439797_ffcbe7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_46be0ad0.c: In function ‘current_token’:
./samples/SAFE/__tmp_46be0ad0.c:176: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_46be0ad0.c:175:5: error: expected declaration or statement at end of input
  175 |     if
      |     ^~
